# AiCodeReview

./: Dockerfile  README.md  config_example.json  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  models.py
src/static/: styles.css
src/templates/: index.html  review.html
src/utils/: __init__.py  ai_api.py  github_api.py  read_config.py  redis.py
tests/: test_ai_api.py  test_github_api.py  test_main.py  test_models.py  test_read_config.py  test_redis.py
